--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
 	            <a href="#">View More</a>
 	        </figcaption>         
 	    </figure>
+	    
+	    <figure class="effect-duke">
+	        <img class="bw" src="img/how-we-work.png" alt="Our Story"/>
+	        <img class="color" src="img/how-we-work-color.png" alt="Our Story"/>
+			<figcaption>
+	            <h2>How We Work</h2>
+	            <a href="#">View More</a>
+	        </figcaption>         
+	    </figure>
 		
         <figure class="effect-duke">
 	        <img src="img/how-we-work.png" alt="How We Work"/>
