--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 	    <div>
 	        <h1>KOTN</h1>
 	
-	        <p class="summary">They’re the moments that no one ever thought to photograph, the ones that we would give anything to re-live. They are not the most stressful meetings or the swankiest parties, what ends up most important is just the gift of a perfectly ordinary day.</p>
+	        <p class="summary">We exist to elevate the every day.<br> The moments that no one ever thought to photograph. The ones we would give anything to re-live. It's not the stressful meetings or the swanky parties, but what ends up most important is just the gift of a perfectly&nbsp;ordinary&nbsp;day.</p>
 	
-	        <p class="summary">Elevate the ordinary.</p> <!-- Find joy in the ordinary. -->
+	        <p class="summary">Find joy in the ordinary.</p> <!-- Find joy in the ordinary. -->
 	
 	        <form action="#">
-	            <input type="text" id="test-input" placeholder="Your email" class="floatlabel"> <button type="submit">Request Invite</button>
+	            <input type="email" placeholder="Your email" class="floatlabel">
+	            <button type="submit">Request Invite</button>
 	        </form>
 	    </div>
 
@@ -55,13 +56,13 @@
     
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript">window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-	<script src="js/plugins.js" type="text/javascript"></script>
-	<script src="js/floatlabels.min.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
+	<script src="js/plugins.js"></script>
+	<script src="js/floatlabels.min.js"></script>
+	<script src="js/main.js"></script>
 	<script type="text/javascript">
          $('input.floatlabel').floatlabel({
-                 slideInput: false
-             });
+	         "transitionDuration": .5
+         });
     </script>
 </body>
 </html>
