--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 	    <div>
 	        <h1>KOTN</h1>
 	
-	        <p class="summary">We exist to elevate the every day.<br> The moments that no one ever thought to photograph. The ones we would give anything to re-live. It's not the stressful meetings or the swanky parties, but what ends up most important is just the gift of a perfectly&nbsp;ordinary&nbsp;day.</p>
+<!-- 	        <p class="summary">We exist to elevate the every day.<br> The moments that no one ever thought to photograph. The ones we would give anything to re-live. It's not the stressful meetings or the swanky parties, but what ends up most important is just the gift of a perfectly&nbsp;ordinary&nbsp;day.</p> -->
+	        
+	           <p class="summary">A hot bath on a cold winter night. Walks to the creek. Getting into crisp clean sheets. The city after the rain. A cup of coffee on the dock. Finding the perfect t-shirt. Most of the time the ordinary moments, the ones we never thought to photograph, are the ones we'd give anything to relive.</p>
+   <p class="summary">We believe in the perfectly ordinary. Valuing the beauty in everyday things. That's what inspired us to create the ultimate essentials, using the finest&nbsp;quality&nbsp;Egyptian&nbsp;cotton.</p>
 	
 	        <p class="summary">Find joy in the ordinary.</p> <!-- Find joy in the ordinary. -->
 	
