--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
     <footer class="nav">
 	    
 	    <figure class="effect-duke">
-	        <img class="bw" src="img/our-story.png" alt="Our Story"/>
-	        <img class="color" src="img/our-story-color.png" alt="Our Story"/>
+	        <img class="bw" src="img/our-story.png" alt="Our Philosophy"/>
+	        <img class="color" src="img/our-story-color.png" alt="Our Philosophy"/>
 	        <figcaption>
-	            <h2>Our Story</h2>
+	            <h2>Our Philosophy</h2>
 	            <a href="#">View More</a>
 	        </figcaption>         
 	    </figure>
 	    
 	    <figure class="effect-duke">
-	        <img class="bw" src="img/how-we-work.png" alt="Our Story"/>
-	        <img class="color" src="img/how-we-work-color.png" alt="Our Story"/>
+	        <img class="bw" src="img/how-we-work.png" alt="Our Process"/>
+	        <img class="color" src="img/how-we-work-color.png" alt="Our Process"/>
 			<figcaption>
-	            <h2>How We Work</h2>
+	            <h2>Our Process</h2>
 	            <a href="#">View More</a>
 	        </figcaption>         
 	    </figure>
