--- a/philosophy.html
+++ b/philosophy.html
@@ -20,9 +20,10 @@
 	    <div>
 	        <h1>KOTN</h1>
 	        
+	        	<h2>Our Philosophy</h2>
+	        	
 	           <p class="summary">Kotn was founded on the idea of bringing quality and design to ordinary things. It was inspired by our own search for the perfect white T shirt. After all, the staple of every wardrobe deserves to be designed with intention, to make us look and feel our best from the inside out.</p>
-
-				<p class="summary">In our mission to create the ultimate essentials, we knew our task came down to two foundational priorities – fabric and fit. Ultimate leaves little wiggle room, so we focus on one material, cotton (Long Staple Egyptian Cotton, to be specific). As essentials, our products fit at the core of your every day; t-shirts, underwear, socks, sheets, towels, & skin care products. These items form the first layer after your skin, so we believe that they should be of the utmost quality. We’ve updated the most ordinary items to elevate the everyday.</p>
+	           <p class="summary">In our mission to create the ultimate essentials, we knew our task came down to two foundational priorities – fabric and fit. Ultimate leaves little wiggle room, so we focus on one material, cotton (Long Staple Egyptian Cotton, to be specific). As essentials, our products fit at the core of your every day; t-shirts, underwear, socks, sheets, towels, and skin care products. These items form the first layer after your skin, so we believe that they should be of the utmost quality. We’ve updated the most ordinary items to elevate the everyday.</p>
 	    </div>
 
     </section>
