--- a/process.html
+++ b/process.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>KOTN | Joy in the Ordinary</title>
-    <meta name="description" content="Egyptian Cotton blah blah blah">
+    <title>KOTN - The Ultimate Essentials in Egyptian Cotton</title>
+    <meta name="description" content="We believe in the perfectly ordinary. Valuing the beauty in everyday things. So we created the ultimate essentials, using the finest quality Egyptian cotton.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/main.css" type="text/css">
     
