--- a/process.html
+++ b/process.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>KOTN - The Ultimate Essentials in Egyptian Cotton</title>
+    <title>KOTN - Our Process</title>
     <meta name="description" content="We believe in the perfectly ordinary. Valuing the beauty in everyday things. So we created the ultimate essentials, using the finest quality Egyptian cotton.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/main.css" type="text/css">
