content & front-end

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="home">
-    <section class="main home">
+    <section class="main home" id="hero">
 	    
 	    <div>
 	        <h1>KOTN</h1>
