--- a/process.html
+++ b/process.html
@@ -14,24 +14,36 @@
 	<script>try{Typekit.load();}catch(e){}</script>
 </head>
 
-<body class="home">
+<body class="process">
+
+	<header>
+		<nav>
+	        <h1><a href="index.html">KOTN</a></h1>
+			
+			<ul>
+				<li><a href="philosophy.html">Philosophy</a></li>
+				<li><a href="process.html">Process</a></li>
+				<li><a href="products.html">Products</a></li>
+			</ul>
+			
+		</nav>
+	</header>
+	
     <section class="main">
 	    
 	    <div>
-	        <h1>KOTN</h1>
-	        
 
 				<h2>Our Process</h2>
 
 				<h3>The Perfect Cut</h3>
-				<p class="summary">Our mission began in New York City, where the Tshirt is the foundation of the city uniform. In search of the perfect cut and fabric, we scoured designer boutiques in SoHo, Vintage bins in Brooklyn and every cotton swatch in the Garment District.</p>
-				<p class="summary">As we had suspected, from $5 - $500 price points the variables just didn’t seem to match up to create that T that was perfect in every way.</p>
-				<p class="summary">We wanted a cut that was slim through the body, with sleeves long enough to roll yet short enough to not, a classic crew neck that lay on the collarbone in just the right place and a hem that hit below the front pockets of our Japanese denim. And we wanted this tshirt cut from the softest 100% cotton we could get our hands on.</p>
+				<p class="summary">Our mission began in New York City, where the T-shirt is the foundation of the city uniform. In search of the perfect cut and fabric, we scoured designer boutiques in SoHo, Vintage bins in Brooklyn and every cotton swatch in the Garment District.</p>
+				<p class="summary">As we had suspected, from the $5 - $500 price points, the variables just didn’t seem to match up to create that T-shirt that was perfect in every way.</p>
+				<p class="summary">We wanted a cut that was slim through the body, with sleeves long enough to roll yet short enough to not, a classic crew neck that lay on the collarbone in just the right place and a hem that hit below the front pockets of our go-to pair of denim. And we wanted this T-shirt cut from the softest 100% cotton we could get our hands on.</p>
 				<h3>The Perfect Fabric</h3>
-				<p class="summary">Looking through the North American market, we found that most of what was sold as Egyptian Cotton was either Short Staple, or Indian or Greek cotton imported into Egypt to be spun. The staple of the cotton indicates the fibres fineness and length; Long Staple having a softer knit, improved strength, and better absorption than Short.</p>
-				<p class="summary">Unable to find the quality we needed we decided to go to the source. However, what was once Egypt's largest export—often referred to as white gold—was now a scarce treasure that's driven competing products to be expensive by default. Many independent farmers lack the infrastructure to have a competent farm. What was once abundant and recognized as the only luxury cotton now faces extinction against cheaper and lower quality alternatives. Tackling this challenge wasn't simple. We had to go to the few places Long Staple Egyptian cotton was still grown.</p>
+				<p class="summary">Looking through the North American market, we found that most of what was sold as Egyptian Cotton was either Short Staple, or Indian or Greek cotton imported into Egypt to be spun. The staple of the cotton indicates the fibres’ fineness and length; Long Staple having a softer knit, improved strength, and better absorption than Short.</p>
+				<p class="summary">Unable to find the quality we needed, we decided to go to the source. However, what was once Egypt's largest export—often referred to as white gold—is now a scarce treasure. Many independent farmers lack the infrastructure to have a stable farm. What was once abundant and recognized as the only luxury cotton, now faces extinction against cheaper and lower quality alternatives. Tackling this challenge wasn't simple. We had to go to the few places Long Staple Egyptian cotton was still grown.</p>
 				<h3>The Perfect Tshirt</h3>
-				<p class="summary">We eventually put into place all the pieces needed to create this one seemingly ordinary item. We bought the raw cotton from independent farmers and loaded it onto trucks. In another district we met with artisans who have spun cotton to the finest yarn since the Middle Ages. In Alexandria, we worked with a family-owned manufacturer to weave the fabric, cut, sew, and dye the garments in a month-long process. And there we had it, our perfect Kotn Tshirt.</p>
+				<p class="summary">We eventually put together all the pieces needed to create this one seemingly ordinary item. We bought the raw cotton from independent farmers and loaded it onto trucks. In another district we met with artisans who have spun cotton into the finest yarn since the Middle Ages. In Alexandria, we worked with a family-owned manufacturer to weave the fabric, cut, sew, and dye the garments in a month-long process. And there we had it, our perfect Kotn T-shirt. The ultimate essential. And that’s just the beginning.</p>
 
 	    </div>
 
