--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
     </section>
     
+<!--     THIS FOOTER NEEDS TO CHANGE – GLOBAL FOOTER TO REPLACE, CURRENT HOMEPAGE FOOTER TO BE CHANGED TO SOMETHING ELSE, LIKE DIV.FOOTERNAV OR NAV.TABS
+	 -->
 
     <footer class="nav">
 	    
@@ -61,6 +63,7 @@
 		
     </footer>
 
+<!-- ADD IN GLOBAL FOOTER HERE TO BE BELOW THE FOLD -->
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript">window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
