--- a/process.html
+++ b/process.html
@@ -50,6 +50,9 @@
     </section>
     
 <!--
+	
+	THIS FOOTER NEEDS TO CHANGE – GLOBAL FOOTER TO REPLACE, CURRENT HOMEPAGE FOOTER TO BE CHANGED TO SOMETHING ELSE, LIKE DIV.FOOTERNAV OR NAV.TABS
+	
     <footer class="nav">
 	    
 	    <figure class="effect-duke">
