--- a/philosophy.html
+++ b/philosophy.html
@@ -41,25 +41,7 @@
     </section>
 
 <!--    
-    <footer class="nav">
-	    
-	    <figure class="effect-duke">
-	        <img class="bw" src="img/our-story.png" alt="Our Philosophy"/>
-	        <img class="color" src="img/our-story-color.png" alt="Our Philosophy"/>
-	        <figcaption>
-	            <h2>Our Philosophy</h2>
-	            <a href="philosophy.html">View More</a>
-	        </figcaption>         
-	    </figure>
-	    
-	    <figure class="effect-duke">
-	        <img class="bw" src="img/how-we-work.png" alt="Our Process"/>
-	        <img class="color" src="img/how-we-work-color.png" alt="Our Process"/>
-			<figcaption>
-	            <h2>Our Process</h2>
-	            <a href="process.html">View More</a>
-	        </figcaption>         
-	    </figure>
+    <footer>
 		
     </footer>
 -->
