--- a/philosophy.html
+++ b/philosophy.html
@@ -31,7 +31,7 @@
 	
     <section class="main">
 	    
-	    <div>
+	    <div class="copy">
 	        	<h2>Our Philosophy</h2>
 	        	
 	           <p class="summary">Kotn was founded on the idea of elevating the everyday, bringing the highest quality and design to ordinary things. It was inspired by our own search for the perfect white T-shirt. After all, the staple of every wardrobe deserves to be designed with intention, to make us look and feel our best from the inside out.</p>
