--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="We believe in the perfectly ordinary. Valuing the beauty in everyday things. So we created the ultimate essentials, using the finest quality Egyptian cotton.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="http://basehold.it/24">
     
     <script src="//use.typekit.net/vyk6ydn.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
@@ -67,9 +68,9 @@
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript">window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-	<script src="js/plugins.js"></script>
-	<script src="js/floatlabels.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/min/floatlabels.min-min.js"></script>
+	<script src="js/min/baseline-min.js"></script>
+	<script src="js/min/main-min.js"></script>
 	<script type="text/javascript">
          $('input.floatlabel').floatlabel({
 	         "transitionDuration": .5
