--- a/process.html
+++ b/process.html
@@ -9,7 +9,7 @@
     <meta name="description" content="We believe in the perfectly ordinary. Valuing the beauty in everyday things. So we created the ultimate essentials, using the finest quality Egyptian cotton.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    <link rel="stylesheet" href="http://basehold.it/24">
+<!--     <link rel="stylesheet" href="http://basehold.it/24"> -->
     
     <script src="//use.typekit.net/vyk6ydn.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
