--- a/about.html
+++ b/about.html
@@ -17,12 +17,16 @@
 	<script>try{Typekit.load();}catch(e){}</script>
 </head>
 
-<body>
+<body class="about">
+
+	<!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 
 	<header>
 		<nav class="m-globalnav">
 			<div class="brand">
-				<span>KOTN</span>
+				<a href="index.html">KOTN</a>
 			</div>
 			<ul>
 				<li><a href="about.html">About Us</a></li>
@@ -32,7 +36,7 @@
 		</nav>
 	</header>
 	
-	<section role="main" class="l-row">
+	<section role="main" class="m-hero-copy l-row">
 		<div class="l-l8">
 		<p class="lead">KOTN was founded on the idea of elevating the everyday, bringing the highest quality and design to ordinary things. It was inspired by our own search for the perfect white T-shirt. After all, the staple of every wardrobe deserves to be designed with intention, to make us look and feel our best from the inside out.</p>
 		<p class="lead">In our mission to create the ultimate essentials, we knew our task came down to two foundational priorities: fabric and fit. Ultimate leaves little wiggle room, so we focus on one material: cotton (Long Staple Egyptian Cotton, to be specific). As essentials, our products fit at the core of your everyday; T-shirts, underwear, socks, sheets, and towels. These items form the first layer after your skin, so we believe that they should be of the utmost quality.</p>
@@ -51,12 +55,12 @@
 			<h4>The Process</h4>
 			<p>We eventually put together all the pieces needed to create this one seemingly ordinary item. We bought the raw cotton from independent farmers and loaded it onto trucks. In another district we met with artisans who have spun cotton into the finest yarn since the Middle Ages. In Alexandria, we worked with a family-owned manufacturer to weave the fabric, cut, sew, and dye the garments in a month-long process. And there we had it, our perfect Kotn T-shirt. The ultimate essential. And that’s just the beginning.</p>
 		</div>
-		<div class="collage l-l7">
+		<div class="m-collage l-l7">
 			<ul>
-				<li><img src="//placehold.it/300x400" alt="" /></li>
-				<li><img src="//placehold.it/300x400" alt="" /></li>
-				<li><img src="//placehold.it/300x400" alt="" /></li>
-				<li><img src="//placehold.it/300x400" alt="" /></li>
+				<li class="m-collage__image l-l2 l-lshift1"><img src="//placehold.it/300x400" alt="" /></li>
+				<li class="m-collage__image l-l3 l-lshift2"><img src="//placehold.it/300x400" alt="" /></li>
+				<li class="m-collage__image l-l2 l-lshift4"><img src="//placehold.it/300x400" alt="" /></li>
+				<li class="m-collage__image l-l4 l-lshift1"><img src="//placehold.it/300x400" alt="" /></li>
 			</ul>
 		</div>
 	</section>
@@ -98,8 +102,8 @@
 		</ul>
 	</section>
 
-	<footer class="l-footer l-footer--signup l-row">
-		<div class="l-footer__form">
+	<footer class="m-footer m-footer--signup l-row">
+		<div class="m-footer__form l-l5">
 			<p class="bold">Sign up to shop early on our next collection:</p>
 			<form id="newsletter-signup" action="signup.php?action=signup" method="post">
 		        <fieldset>
@@ -109,13 +113,13 @@
 		        </fieldset>
 	        </form>
 		</div>
-		<nav>
-			<ul>
+		<nav class="m-footer__nav">
+			<ul class="m-footer__nav__legal">
 				<li>&copy; 2015 KOTN / All rights reserved</li>
 				<li><a href="#">Terms of use</a></li>
 				<li><a href="#">Privacy Policy</a></li>
 			</ul>
-			<ul>
+			<ul class="m-footer__nav__help">
 				<li><a href="#">Country: United States</a></li>
 				<li><a href="#">Shipping info</a></li>
 				<li><a href="#">Press</a></li>
@@ -128,8 +132,11 @@
 	</footer>
 
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript">window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="scripts/plugins.js"></script>
+    <script src="scripts/main.js"></script>
+    
     <script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
