--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script>try{Typekit.load();}catch(e){}</script>
 </head>
 
-<body>
+<body class="home">
 
 	<!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -26,7 +26,7 @@
 	<header>
 		<nav class="m-globalnav">
 			<div class="brand">
-				<span>KOTN</span>
+				<a href="#">KOTN</a>
 			</div>
 			<ul>
 				<li><a href="about.html">About Us</a></li>
@@ -39,27 +39,28 @@
 	<section id="hero" class="m-splash m-splash--launch l-row">
 		<div class="m-callout">
 			<div>
-				<p class="hero-copy">The finest quality Egyptian cotton, <br>handcrafted into the ultimate essentials.</p>
-				<p class="hero-copy">Elevate the ordinary.</p>
-				<button class="cta">Shop now</button>
+				<p class="hero-copy--small" style="text-indent: 0;">Chapter One</p>
+				<p class="hero-copy">The perfect fabric,<br>the perfect fit,<br>the perfect t-shirt.</p>
+<!-- 				<p class="hero-copy">Elevate the ordinary.</p> -->
+				<button class="cta--white">Shop now</button>
 			</div>
 		</div>
-		<div class="m-scrollcta l-l12">
+<!--
+		<div class="m-scrollcta">
 			<a href="#">Scroll down</a>
 		</div>
+-->
 	</section>
+<!--
 	<section role="main" class="about">
 		<div class="m-hero-copy l-row">
 			<div class="l-l8 l-m10 l-s12">
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, fugit facilis tempora magnam perferendis odit consectetur at? Est, corrupti, non, illum iure cum laborum saepe ea eaque expedita neque assumenda.
-			</p>
+			<p>A hot bath on a cold winter night. Walks to the creek. Getting into crisp clean sheets. The city after the rain. A cup of coffee on the dock. Finding the perfect t-shirt. Most of the time the ordinary moments, the ones we never thought to photograph, are the ones we'd give anything to relive.</p>
+			<p>We believe in the perfectly ordinary. Valuing the beauty in everyday things. That's what inspired us to create the ultimate essentials. Pairing the finest quality Egyptian cotton with a focus on sustainability and affordable pricing.</p>
 			</div>
 		</div>
 		<div class="m-threeup l-row">
-		<div>
+		<div class="m-home-key-points">
 			<div class="l-l4">
 				<h3>One thing done well</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, magni libero aliquam non consequatur accusamus porro aut ex cumque repellendus. Eum, cupiditate reiciendis temporibus explicabo doloribus eveniet quod natus officia?</p>
@@ -73,30 +74,36 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, repellendus, saepe quasi praesentium facere veritatis molestiae in quod modi necessitatibus at ipsam assumenda unde voluptates laudantium repudiandae eligendi blanditiis rerum.</p>
 			</div>
 		</div>
-		<a href="about.html" class="cta">Learn more about us</a>
+		<div class="l-l12">
+			<a href="about.html" class="cta">Learn more about us</a>
+		</div>
 	</section>
-	<section id="collections" class="l-row">
+-->
+<!--
+	<section id="collections">
 		<div class="m-collage">
 			<ul>
-				<li>
+				<li class="m-collage__image l-l3">
 					<img src="//placehold.it/500x700" alt="#" />
-				</li> <!-- Change to picture element -->
-				<li>
+				</li>
+				<li class="m-collage__image l-l9 l-lshift2">
 					<img src="//placehold.it/900x500" alt="#" />
-				</li> <!-- Change to picture element -->
-				<li>
+				</li>
+				<li class="m-collage__image l-l3 l-lshift9">
 					<img src="//placehold.it/300x500" alt="#" />
-				</li> <!-- Change to picture element -->
+				</li>
 			</ul>			
 		</div>
-		<div class="m-collection m-collage">
+		<div class="m-collection l-row" style="min-height: 600px;">
 			<h2>The T-Shirt</h2>
 			<h4>Free shipping &amp; returns &mdash; 15% off subscriptions</h4>
 			<a href="#" class="cta">Shop now</a>
 		</div>
 	</section>
-	<footer class="l-footer l-footer--signup l-row">
-		<div class="l-footer__form">
+-->
+	<footer class="m-footer m-footer--signup l-row">
+<!--
+		<div class="m-footer__form l-l5">
 			<p class="bold">Sign up to shop early on our next collection:</p>
 			<form id="newsletter-signup" action="signup.php?action=signup" method="post">
 		        <fieldset>
@@ -106,13 +113,14 @@
 		        </fieldset>
 	        </form>
 		</div>
-		<nav>
-			<ul>
+-->
+		<nav class="m-footer__nav">
+			<ul class="m-footer__nav__legal">
 				<li>&copy; 2015 KOTN / All rights reserved</li>
 				<li><a href="#">Terms of use</a></li>
 				<li><a href="#">Privacy Policy</a></li>
 			</ul>
-			<ul>
+			<ul class="m-footer__nav__help">
 				<li><a href="#">Country: United States</a></li>
 				<li><a href="#">Shipping info</a></li>
 				<li><a href="#">Press</a></li>
@@ -126,8 +134,8 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="scripts/plugins.js"></script>
+    <script src="scripts/main.js"></script>
     
     <script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
