--- a/lookbook.html
+++ b/lookbook.html
@@ -17,12 +17,16 @@
 	<script>try{Typekit.load();}catch(e){}</script>
 </head>
 
-<body>
+<body class="lookbook">
+
+	<!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 
 	<header>
 		<nav class="m-globalnav">
 			<div class="brand">
-				<span>KOTN</span>
+				<a href="index.html">KOTN</a>
 			</div>
 			<ul>
 				<li><a href="about.html">About Us</a></li>
@@ -33,39 +37,40 @@
 	</header>
 	
 	<section role="main">
-		<ul>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
-			<li><img src="//placehold.it/400x300" alt="" /></li>
+		<ul class="js-masonry l-row" data-masonry-options='{ "columnWidth": ".grid-sizer", "itemSelector": ".item" }'>
+			<li class="grid-sizer l-l1"></li>
+			<li class="notm-collage__image l-l2 notl-lshift-1"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l4 notl-lshift3"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l8 notl-lshift6"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l3 notl-lshift3"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l2 notl-lshift5"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l6 notl-lshift8"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l9 notl-lshift1"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l2 notl-lshift2"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l6 notl-lshift-1"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l4 notl-lshift5"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l8 notl-lshift-2"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l4 notl-lshift9"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l3 notl-lshift2"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l2 notl-lshift5"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l6 notl-lshift6"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l4 notl-lshift5"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l7 notl-lshift8"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l4 notl-lshift3"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l6 notl-lshift9"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l2 notl-lshift1"><img src="//placehold.it/400x300" alt="" /></li>
 
 		</ul>
 	</section>
 
-	<footer class="l-footer l-footer--signup l-row">
-		<nav>
-			<ul>
+	<footer class="m-footer l-row">
+		<nav class="m-footer__nav">
+			<ul class="m-footer__nav__legal">
 				<li>&copy; 2015 KOTN / All rights reserved</li>
 				<li><a href="#">Terms of use</a></li>
 				<li><a href="#">Privacy Policy</a></li>
 			</ul>
-			<ul>
+			<ul class="m-footer__nav__help">
 				<li><a href="#">Country: United States</a></li>
 				<li><a href="#">Shipping info</a></li>
 				<li><a href="#">Press</a></li>
@@ -77,10 +82,12 @@
 		</nav>
 	</footer>
 
-
-
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript">window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="scripts/plugins.js"></script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/vendor/masonry.pkgd.min.js"></script>
+    
     <script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
