--- a/product.html
+++ b/product.html
@@ -17,17 +17,21 @@
 	<script>try{Typekit.load();}catch(e){}</script>
 </head>
 
-<body>
+<body class="product">
+
+	<!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 
 	<header>
-		<nav>
+		<nav class="m-globalnav">
 			<div class="brand">
-				
+				<a href="index.html">KOTN</a>
 			</div>
 			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li><a href="about.html">About Us</a></li>
+				<li><a href="lookbook.html">Lookbook</a></li>
+				<li><a href="shop.html">Shop</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -36,26 +40,40 @@
 		
 	</section>
 	
-	<footer>
-		<ul>
-			<li>&copy; 2015 KOTN / All rights reserved</li>
-			<li><a href="#">Terms of use</a></li>
-			<li><a href="#">Privacy Policy</a></li>
-		</ul>
-		<ul>
-			<li><a href="#">Country: United States</a></li>
-			<li><a href="#">Shipping info</a></li>
-			<li><a href="#">Press</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Careers</a></li>
-			<li><a href="#">Contact</a></li>
-			<li><a href="#">Subscribe to newsletter</a></li>
-		</ul>
+	<footer class="m-footer m-footer--signup l-row">
+		<div class="m-footer__form l-l5">
+			<p class="bold">Sign up to shop early on our next collection:</p>
+			<form id="newsletter-signup" action="signup.php?action=signup" method="post">
+		        <fieldset>
+					<div class="floatlabel-wrapper"><label for="signup-email" class="label-floatlabel">Your email</label><input type="text" name="signup-email" id="signup-email" placeholder="Your email" class="floatlabel"></div>
+					<button type="submit" id="signup-button">Request Invite</button>
+					<p id="signup-response"></p>
+		        </fieldset>
+	        </form>
+		</div>
+		<nav class="m-footer__nav">
+			<ul class="m-footer__nav__legal">
+				<li>&copy; 2015 KOTN / All rights reserved</li>
+				<li><a href="#">Terms of use</a></li>
+				<li><a href="#">Privacy Policy</a></li>
+			</ul>
+			<ul class="m-footer__nav__help">
+				<li><a href="#">Country: United States</a></li>
+				<li><a href="#">Shipping info</a></li>
+				<li><a href="#">Press</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Careers</a></li>
+				<li><a href="#">Contact</a></li>
+				<li><a href="#">Subscribe to newsletter</a></li>
+			</ul>
+		</nav>
 	</footer>
 
-
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript">window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="scripts/plugins.js"></script>
+    <script src="scripts/main.js"></script>
+    
     <script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
