--- a/shop.html
+++ b/shop.html
@@ -17,12 +17,16 @@
 	<script>try{Typekit.load();}catch(e){}</script>
 </head>
 
-<body>
+<body class="shop">
+
+	<!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 
 	<header>
 		<nav class="m-globalnav">
 			<div class="brand">
-				<span>KOTN</span>
+				<a href="index.html">KOTN</a>
 			</div>
 			<ul>
 				<li><a href="about.html">About Us</a></li>
@@ -33,10 +37,10 @@
 	</header>
 
 	<section role="main">
-		<div class="l-row">
-			<div class="l-l8">
-				<p class="lead">KOTN was founded on the idea of elevating the everyday, bringing the highest quality and design to ordinary things. It was inspired by our own search for the perfect white T-shirt. After all, the staple of every wardrobe deserves to be designed with intention, to make us look and feel our best from the inside out.</p>
-				<p class="lead">In our mission to create the ultimate essentials, we knew our task came down to two foundational priorities: fabric and fit. Ultimate leaves little wiggle room, so we focus on one material: cotton (Long Staple Egyptian Cotton, to be specific). As essentials, our products fit at the core of your everyday; T-shirts, underwear, socks, sheets, and towels. These items form the first layer after your skin, so we believe that they should be of the utmost quality.</p>
+		<div class="m-hero-copy l-row">
+			<div class="l-l8 l-m10 l-s12">
+			<p>A hot bath on a cold winter night. Walks to the creek. Getting into crisp clean sheets. The city after the rain. A cup of coffee on the dock. Finding the perfect t-shirt. Most of the time the ordinary moments, the ones we never thought to photograph, are the ones we'd give anything to relive.</p>
+			<p>We believe in the perfectly ordinary. Valuing the beauty in everyday things. That's what inspired us to create the ultimate essentials. Pairing the finest quality Egyptian cotton with a focus on sustainability and affordable pricing.</p>
 			</div>
 		</div>
 		<div class="l-row">
@@ -65,8 +69,8 @@
 	</section>
 	
 
-	<footer class="l-footer l-footer--signup l-row">
-		<div class="l-footer__form">
+	<footer class="m-footer m-footer--signup l-row">
+		<div class="m-footer__form l-l5">
 			<p class="bold">Sign up to shop early on our next collection:</p>
 			<form id="newsletter-signup" action="signup.php?action=signup" method="post">
 		        <fieldset>
@@ -76,13 +80,13 @@
 		        </fieldset>
 	        </form>
 		</div>
-		<nav>
-			<ul>
+		<nav class="m-footer__nav">
+			<ul class="m-footer__nav__legal">
 				<li>&copy; 2015 KOTN / All rights reserved</li>
 				<li><a href="#">Terms of use</a></li>
 				<li><a href="#">Privacy Policy</a></li>
 			</ul>
-			<ul>
+			<ul class="m-footer__nav__help">
 				<li><a href="#">Country: United States</a></li>
 				<li><a href="#">Shipping info</a></li>
 				<li><a href="#">Press</a></li>
@@ -94,11 +98,11 @@
 		</nav>
 	</footer>
 
-
-
-
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript">window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+    <script src="scripts/plugins.js"></script>
+    <script src="scripts/main.js"></script>
+    
     <script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
