--- a/about-old.html
+++ b/about-old.html
@@ -36,9 +36,24 @@
 		</nav>
 	</header>
 	
+	<section class="m-herohalf l-row">
+		<div class="l-l12">
+			<div class="slogan">
+				<h1>Find joy in the ordinary</h1>
+			</div>
+		</div>
+	</section>
+	
+	<section role="main" class="m-hero-copy l-row">
+		<div class="l-l8 l-lshift2">
+		<p class="lead">A hot bath on a cold winter night. Walks to the creek. Getting into crisp clean sheets. The city after the rain. A cup of coffee on the dock. Finding the perfect t-shirt. Most of the time the ordinary moments, the ones we never thought to photograph, are the ones we'd give anything to relive.</p>
+		<p class="lead">We believe in the perfectly ordinary. Valuing the beauty in everyday things. That's what inspired us to create the ultimate essentials. Pairing the finest quality Egyptian cotton with a focus on sustainability and affordable pricing.</p>
+		</div>
+	</section>
+	
 	<section role="main" class="m-hero-copy l-row">
 		<div class="l-l8">
-		<p class="lead">KOTN was founded on the idea of elevating the everyday, bringing the highest quality and design to ordinary things. It was inspired by our own search for the perfect white T-shirt. After all, the staple of every wardrobe deserves to be designed with intention, to make us look and feel our best from the inside out.</p>
+		<p class="lead">Kotn was founded on the idea of elevating the everyday, bringing the highest quality and design to ordinary things. It was inspired by our own search for the perfect white T-shirt. After all, the staple of every wardrobe deserves to be designed with intention, to make us look and feel our best from the inside out.</p>
 		<p class="lead">In our mission to create the ultimate essentials, we knew our task came down to two foundational priorities: fabric and fit. Ultimate leaves little wiggle room, so we focus on one material: cotton (Long Staple Egyptian Cotton, to be specific). As essentials, our products fit at the core of your everyday; T-shirts, underwear, socks, sheets, and towels. These items form the first layer after your skin, so we believe that they should be of the utmost quality.</p>
 		</div>
 	</section>
