--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 				<a href="#">KOTN</a>
 			</div>
 			<ul>
-				<li><a href="about.html">About Us</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="quality.html">Quality</a></li>
 				<li><a href="lookbook.html">Lookbook</a></li>
 				<li><a href="shop.html">Shop</a></li>
 			</ul>
@@ -122,12 +123,11 @@
 			</ul>
 			<ul class="m-footer__nav__help">
 				<li><a href="#">Country: United States</a></li>
+				<li><a href="#">Subscribe to newsletter</a></li>
 				<li><a href="#">Shipping info</a></li>
 				<li><a href="#">Press</a></li>
-				<li><a href="#">About</a></li>
 				<li><a href="#">Careers</a></li>
 				<li><a href="#">Contact</a></li>
-				<li><a href="#">Subscribe to newsletter</a></li>
 			</ul>
 		</nav>
 	</footer>
