--- a/lookbook-old.html
+++ b/lookbook-old.html
@@ -29,7 +29,7 @@
 				<a href="index.html">KOTN</a>
 			</div>
 			<ul>
-				<li><a href="about.html">About</a></li>
+				<li><a href="about.html">About Us</a></li>
 				<li><a href="quality.html">Quality</a></li>
 				<li><a href="lookbook.html">Lookbook</a></li>
 				<li><a href="shop.html">Shop</a></li>
@@ -38,28 +38,29 @@
 	</header>
 	
 	<section role="main">
-		<ul class="l-row">
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
+		<ul class="js-masonry l-row" data-masonry-options='{ "columnWidth": ".grid-sizer", "itemSelector": ".item" }'>
+			<li class="grid-sizer l-l1"></li>
+			<li class="notm-collage__image l-l2 notl-lshift-1"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l4 notl-lshift3"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l8 notl-lshift6"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l3 notl-lshift3"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l2 notl-lshift5"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l6 notl-lshift8"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l9 notl-lshift1"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l2 notl-lshift2"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l6 notl-lshift-1"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l4 notl-lshift5"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l8 notl-lshift-2"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l4 notl-lshift9"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l3 notl-lshift2"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l2 notl-lshift5"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l6 notl-lshift6"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l4 notl-lshift5"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l7 notl-lshift8"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l4 notl-lshift3"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l6 notl-lshift9"><img src="//placehold.it/400x300" alt="" /></li>
+			<li class="notm-collage__image l-l2 notl-lshift1"><img src="//placehold.it/400x300" alt="" /></li>
+
 		</ul>
 	</section>
 
@@ -86,6 +87,7 @@
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
     <script src="scripts/plugins.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/vendor/masonry.pkgd.min.js"></script>
     
     <script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
