--- a/shop.html
+++ b/shop.html
@@ -29,20 +29,36 @@
 				<a href="index.html">KOTN</a>
 			</div>
 			<ul>
-				<li><a href="about.html">About Us</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="quality.html">Quality</a></li>
 				<li><a href="lookbook.html">Lookbook</a></li>
 				<li><a href="shop.html">Shop</a></li>
 			</ul>
 		</nav>
 	</header>
 
-	<section role="main">
-		<div class="m-hero-copy l-row">
-			<div class="l-l8 l-m10 l-s12">
-			<p>A hot bath on a cold winter night. Walks to the creek. Getting into crisp clean sheets. The city after the rain. A cup of coffee on the dock. Finding the perfect t-shirt. Most of the time the ordinary moments, the ones we never thought to photograph, are the ones we'd give anything to relive.</p>
-			<p>We believe in the perfectly ordinary. Valuing the beauty in everyday things. That's what inspired us to create the ultimate essentials. Pairing the finest quality Egyptian cotton with a focus on sustainability and affordable pricing.</p>
+	
+	<section class="m-herohalf m-herohalf--top l-row" style="background-image: url('images/demo/beauty-ordinary.jpg')">
+		<div class="l-l12">
+			<!--
+<div class="slogan">
+				<h1>Find beauty in the ordinary</h1>
 			</div>
+-->
 		</div>
+	</section>
+	
+	<!--
+<section role="main" class="m-hero-copy l-row">
+		<div class="l-l8 l-lshift2">
+		<p class="lead">A hot bath on a cold winter night. Walks to the creek. Getting into crisp clean sheets. The city after the rain. A cup of coffee on the dock. Finding the perfect t-shirt. Most of the time the ordinary moments, the ones we never thought to photograph, are the ones we'd give anything to relive.</p>
+		<p class="lead">We believe in the perfectly ordinary. Valuing the beauty in everyday things. That's what inspired us to create the ultimate essentials. Pairing the finest quality Egyptian cotton with a focus on sustainability and affordable pricing.</p>
+		</div>
+	</section>
+-->
+
+
+	<section role="main">
 		<div class="l-row">
 			<div class="m-product l-l4">
 				<img src="//placehold.it/400x500" alt="product 1" />
