--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 	</header>
 	
 	<section class="m-herohalf m-herohalf--top l-row" style="background-image: url('images/demo/beauty-ordinary.jpg')">
-		<div class="l-l12">
+		<div class="l-l12 b-white">
 			<div class="slogan">
 				<h1>Find beauty in the ordinary</h1>
 			</div>
@@ -56,31 +56,25 @@
 		</div>
 	</section>
 	
-	<section class="m-herohalf l-row">
-		<div class="l-l12">
-			<div class="l-l4">
+	<section class="m-herohalf l-row" style="background-image: url('images/demo/onethingdonewell.jpg')">
+			<div class="l-l4 l-lshift1 b-white">
 				<h3>One thing done well</h3>
 				<p>Our design and production team handles one fabric, and one fabric only, Egyptian cotton. This enables us to use the very best patterns, dyes and machines for the fabric enabling us to create the ultimate luxury basics.</p>
 			</div>
-		</div>
 	</section>
 	
-	<section class="m-herohalf l-row">
-		<div class="l-l12">
-			<div class="l-l4 l-lshift8">
+	<section class="m-herohalf l-row" style="background-image: url('images/demo/everydayluxury.jpg')">
+			<div class="l-l4 l-lshift7 b-white">
 				<h3>Everyday Luxury</h3>
 				<p>Integrating ourselves into the entire process from farm to factory provides an unmatched level of detail and quality, with a price tag that won’t break the bank.</p>
 			</div>
-		</div>
 	</section>
 	
-	<section class="m-herohalf l-row">
-		<div class="l-l12">
-			<div class="l-l4">
+	<section class="m-herohalf l-row" style="background: black;">
+			<div class="l-l4 l-lshift1 b-white">
 				<h3>Sustainable by design</h3>
 				<p>To rejuvenate the egyptian cotton industry, we enforce strict sustainability practices, and provide private subsidies so the independent farmers can focus on what they love, not on where their next meal will come from</p>
 			</div>
-		</div>
 	</section>
 	
 	
