--- a/lookbook.html
+++ b/lookbook.html
@@ -37,29 +37,24 @@
 		</nav>
 	</header>
 	
-	<section role="main">
+	<section role="main" class="m-lookbook">
 		<ul class="l-row">
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
-			<li><img src="//placehold.it/1440x900" alt="" /></li>
-			<li><img src="//placehold.it/440x900" alt="" /></li>
-			<li><img src="//placehold.it/1240x900" alt="" /></li>
+			<li><img src="images/demo/lookbook-1.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-2.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-3.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-4.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-5.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-6.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-7.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-8.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-9.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-10.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-11.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-12.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-13.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-14.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-15.jpg" alt="" /></li>
+			<li><img src="images/demo/lookbook-16.jpg" alt="" /></li>
 		</ul>
 	</section>
 
