--- a/quality.html
+++ b/quality.html
@@ -21,7 +21,7 @@
 	<script>try{Typekit.load();}catch(e){}</script>
 </head>
 
-<body class="about">
+<body class="quality">
 
 	<!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -41,8 +41,8 @@
 		</nav>
 	</header>
 	
-	<section class="m-herohalf m-herohalf--top l-row">
-		<div class="l-l12">
+	<section class="m-herohalf m-herohalf--top l-row" style="background-image: url('images/demo/beauty-ordinary.jpg')">
+		<div class="l-l12 b-white">
 			<div class="slogan">
 				<h1>White gold</h1>
 			</div>
@@ -50,72 +50,34 @@
 	</section>
 	
 	<section role="main" class="m-hero-copy l-row">
-		<div class="l-l8 l-lshift2">
-		<p class="lead">A hot bath on a cold winter night. Walks to the creek. Getting into crisp clean sheets. The city after the rain. A cup of coffee on the dock. Finding the perfect t-shirt. Most of the time the ordinary moments, the ones we never thought to photograph, are the ones we'd give anything to relive.</p>
-		<p class="lead">We believe in the perfectly ordinary. Valuing the beauty in everyday things. That's what inspired us to create the ultimate essentials. Pairing the finest quality Egyptian cotton with a focus on sustainability and affordable pricing.</p>
+		<div class="l-l8 l-lshift2 b-centered">
+		<p class="lead">"Egypt is the gift of the nile"</p>
+		<p class="lead b-italics">-Herodotus</p>
 		</div>
 	</section>
 	
-	<section class="m-herohalf l-row">
-		<div class="l-l12">
-			<div class="l-l4">
+	<section class="m-herohalf l-row" style="background-image: url('images/demo/onethingdonewell.jpg')">
+			<div class="l-l4 l-lshift1 b-white">
 				<h3>One thing done well</h3>
 				<p>Our design and production team handles one fabric, and one fabric only, Egyptian cotton. This enables us to use the very best patterns, dyes and machines for the fabric enabling us to create the ultimate luxury basics.</p>
 			</div>
-		</div>
 	</section>
 	
-	<section class="m-herohalf l-row">
-		<div class="l-l12">
-			<div class="l-l4 l-lshift8">
+	<section class="m-herohalf l-row" style="background-image: url('images/demo/everydayluxury.jpg')">
+			<div class="l-l4 l-lshift7 b-white">
 				<h3>Everyday Luxury</h3>
 				<p>Integrating ourselves into the entire process from farm to factory provides an unmatched level of detail and quality, with a price tag that won’t break the bank.</p>
 			</div>
-		</div>
 	</section>
 	
-	<section class="m-herohalf l-row">
-		<div class="l-l12">
-			<div class="l-l4">
+	<section class="m-herohalf l-row" style="background: black;">
+			<div class="l-l4 l-lshift1 b-white">
 				<h3>Sustainable by design</h3>
 				<p>To rejuvenate the egyptian cotton industry, we enforce strict sustainability practices, and provide private subsidies so the independent farmers can focus on what they love, not on where their next meal will come from</p>
 			</div>
-		</div>
-	</section>
-	
-	
-	
-	<section id="team" class="m-team">
-		<ul class="l-row">
-			<li class="m-team__member l-l4">
-				<img src="//placehold.it/900x900&text=Profile+Photo" alt="" />
-				<h4>Mackenzie Yeates</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, repudiandae, et, dignissimos fuga sit placeat ratione dolor similique commodi ipsum nobis quod quos laboriosam? Necessitatibus nihil ipsa excepturi architecto error.</p>
-			</li>
-			<li class="m-team__member l-l4">
-				<img src="//placehold.it/900x900&text=Profile+Photo" alt="" />
-				<h4>Rami Helali</h4>
-				<p>Temporibus, aspernatur, sint, quam voluptates eos sed quas reiciendis soluta iusto debitis quo dolorem totam architecto suscipit non dignissimos dicta. Nesciunt, possimus dolores debitis quis quidem harum maiores facilis nostrum.</p>
-			</li>
-			<li class="m-team__member l-l4">
-				<img src="//placehold.it/900x900&text=Profile+Photo" alt="" />
-				<h4>Benjamin Sehl</h4>
-				<p>Sunt, beatae, sit, aspernatur, voluptates cumque tempore iusto earum exercitationem quam amet libero sequi voluptate laudantium aliquam mollitia eveniet quod asperiores magnam excepturi explicabo soluta fugiat possimus laborum numquam illo!</p>
-			</li>
-		</ul>
 	</section>
 
-	<footer class="m-footer m-footer--signup l-row">
-		<div class="m-footer__form l-l5">
-			<p class="bold">Sign up to shop early on our next collection:</p>
-			<form id="newsletter-signup" action="signup.php?action=signup" method="post">
-		        <fieldset>
-					<div class="floatlabel-wrapper"><label for="signup-email" class="label-floatlabel">Your email</label><input type="text" name="signup-email" id="signup-email" placeholder="Your email" class="floatlabel"></div>
-					<button type="submit" id="signup-button">Request Invite</button>
-					<p id="signup-response"></p>
-		        </fieldset>
-	        </form>
-		</div>
+	<footer class="m-footer l-row">
 		<nav class="m-footer__nav">
 			<ul class="m-footer__nav__legal">
 				<li>&copy; 2015 KOTN / All rights reserved</li>
