--- a/about.html
+++ b/about.html
@@ -70,10 +70,10 @@
 			</div>
 	</section>
 	
-	<section class="m-herohalf l-row" style="background: black;">
+	<section class="m-herohalf l-row" style="background-image: url('images/demo/sustainable.jpg')">
 			<div class="l-l4 l-lshift1 b-white">
 				<h3>Sustainable by design</h3>
-				<p>To rejuvenate the egyptian cotton industry, we enforce strict sustainability practices, and provide private subsidies so the independent farmers can focus on what they love, not on where their next meal will come from</p>
+				<p>To rejuvenate the egyptian cotton industry, we enforce strict sustainability practices, and provide private subsidies so the independent farmers can focus on what they love, not on where their next meal will come from.</p>
 			</div>
 	</section>
 	
@@ -83,33 +83,29 @@
 		<ul class="l-row">
 			<li class="m-team__member l-l4">
 				<img src="//placehold.it/900x900&text=Profile+Photo" alt="" />
+				<div class="copy">
 				<h4>Mackenzie Yeates</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, repudiandae, et, dignissimos fuga sit placeat ratione dolor similique commodi ipsum nobis quod quos laboriosam? Necessitatibus nihil ipsa excepturi architecto error.</p>
+				</div>
 			</li>
 			<li class="m-team__member l-l4">
 				<img src="//placehold.it/900x900&text=Profile+Photo" alt="" />
+				<div class="copy">
 				<h4>Rami Helali</h4>
 				<p>Temporibus, aspernatur, sint, quam voluptates eos sed quas reiciendis soluta iusto debitis quo dolorem totam architecto suscipit non dignissimos dicta. Nesciunt, possimus dolores debitis quis quidem harum maiores facilis nostrum.</p>
+				</div>
 			</li>
 			<li class="m-team__member l-l4">
 				<img src="//placehold.it/900x900&text=Profile+Photo" alt="" />
+				<div class="copy">
 				<h4>Benjamin Sehl</h4>
 				<p>Sunt, beatae, sit, aspernatur, voluptates cumque tempore iusto earum exercitationem quam amet libero sequi voluptate laudantium aliquam mollitia eveniet quod asperiores magnam excepturi explicabo soluta fugiat possimus laborum numquam illo!</p>
+				</div>
 			</li>
 		</ul>
 	</section>
 
 	<footer class="m-footer m-footer--signup l-row">
-		<div class="m-footer__form l-l5">
-			<p class="bold">Sign up to shop early on our next collection:</p>
-			<form id="newsletter-signup" action="signup.php?action=signup" method="post">
-		        <fieldset>
-					<div class="floatlabel-wrapper"><label for="signup-email" class="label-floatlabel">Your email</label><input type="text" name="signup-email" id="signup-email" placeholder="Your email" class="floatlabel"></div>
-					<button type="submit" id="signup-button">Request Invite</button>
-					<p id="signup-response"></p>
-		        </fieldset>
-	        </form>
-		</div>
 		<nav class="m-footer__nav">
 			<ul class="m-footer__nav__legal">
 				<li>&copy; 2015 KOTN / All rights reserved</li>
