--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<p class="hero-copy--small" style="text-indent: 0;">Chapter One</p>
 				<p class="hero-copy">The perfect fabric,<br>the perfect fit,<br>the perfect t-shirt.</p>
 <!-- 				<p class="hero-copy">Elevate the ordinary.</p> -->
-				<button class="cta--white">Shop now</button>
+				<a href="shop.html" class="cta--white">Shop now</a>
 			</div>
 		</div>
 <!--
