--- a/quality.html
+++ b/quality.html
@@ -41,10 +41,10 @@
 		</nav>
 	</header>
 	
-	<section class="m-herohalf m-herohalf--top l-row" style="background-image: url('images/demo/beauty-ordinary.jpg')">
+	<section class="m-herohalf m-herohalf--top l-row" style="background-image: url('images/demo/whitegold.jpg')">
 		<div class="l-l12 b-white">
 			<div class="slogan">
-				<h1>White gold</h1>
+				<h1>White Gold</h1>
 			</div>
 		</div>
 	</section>
@@ -70,10 +70,10 @@
 			</div>
 	</section>
 	
-	<section class="m-herohalf l-row" style="background: black;">
+	<section class="m-herohalf l-row" style="background-image: url('images/demo/sustainable.jpg')">
 			<div class="l-l4 l-lshift1 b-white">
 				<h3>Sustainable by design</h3>
-				<p>To rejuvenate the egyptian cotton industry, we enforce strict sustainability practices, and provide private subsidies so the independent farmers can focus on what they love, not on where their next meal will come from</p>
+				<p>To rejuvenate the egyptian cotton industry, we enforce strict sustainability practices, and provide private subsidies so the independent farmers can focus on what they love, not on where their next meal will come from.</p>
 			</div>
 	</section>
 
