--- a/shop.html
+++ b/shop.html
@@ -59,25 +59,25 @@
 
 
 	<section role="main">
-		<div class="l-row">
+		<div class="l-row m-shop">
 			<div class="m-product l-l4">
 				<img src="//placehold.it/400x500" alt="product 1" />
 				<div class="copy">
-					<h3>The Crew</h3>
+					<h4>The Crew</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 				</div>
 			</div>
 			<div class="m-product l-l4">
 				<img src="//placehold.it/400x500" alt="product 2" />
 				<div class="copy">
-					<h3>The V</h3>
+					<h4>The V</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 				</div>
 			</div>
 			<div class="m-product l-l4 l-omega">
 				<img src="//placehold.it/400x500" alt="product 3" />
 				<div class="copy">
-					<h3>The Scoop</h3>
+					<h4>The Scoop</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 				</div>
 			</div>
@@ -86,7 +86,8 @@
 	
 
 	<footer class="m-footer m-footer--signup l-row">
-		<div class="m-footer__form l-l5">
+		<!--
+<div class="m-footer__form l-l5">
 			<p class="bold">Sign up to shop early on our next collection:</p>
 			<form id="newsletter-signup" action="signup.php?action=signup" method="post">
 		        <fieldset>
@@ -96,6 +97,7 @@
 		        </fieldset>
 	        </form>
 		</div>
+-->
 		<nav class="m-footer__nav">
 			<ul class="m-footer__nav__legal">
 				<li>&copy; 2015 KOTN / All rights reserved</li>
