--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</nav>
 	</header>
 
-	<section id="hero" class="m-splash m-splash--launch l-row" style="background-image: url(/images/demo/home.jpg)">
+	<section id="hero" class="m-splash m-splash--launch l-row" style="background-image: url(images/demo/home.jpg)">
 		<div class="m-callout">
 			<div>
 				<p class="hero-copy--small" style="text-indent: 0;">Chapter One</p>
