--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 		</nav>
 	</header>
 	
-	<section class="m-herohalf m-herohalf--top l-row" style="background-image: url('images/demo/beauty-ordinary.jpg')">
+	<section class="m-herohalf m-herohalf--top l-row" style="background-image: url('images/demo/shophero.jpg')">
 		<div class="l-l12 b-white">
 			<div class="slogan">
 				<h1>Find beauty in the ordinary</h1>
