--- a/quality.html
+++ b/quality.html
@@ -56,24 +56,24 @@
 		</div>
 	</section>
 	
-	<section class="m-herohalf l-row" style="background-image: url('images/demo/onethingdonewell.jpg')">
+	<section class="m-herohalf l-row" style="background-image: url('images/demo/location.jpg')">
 			<div class="l-l4 l-lshift1 b-white">
-				<h3>One thing done well</h3>
-				<p>Our design and production team handles one fabric, and one fabric only, Egyptian cotton. This enables us to use the very best patterns, dyes and machines for the fabric enabling us to create the ultimate luxury basics.</p>
+				<h3>The Nile Delta</h3>
+				<p>Egyptian cotton only grows in a small area called the Nile Delta. The Nile Delta's proximity to the mediterranean coupled with its fertile lands make the weather and soil ideal for the cultivation of the world's finest cotton.</p>
 			</div>
 	</section>
 	
-	<section class="m-herohalf l-row" style="background-image: url('images/demo/everydayluxury.jpg')">
+	<section class="m-herohalf l-row" style="background-image: url('images/demo/integrity.jpg')">
 			<div class="l-l4 l-lshift7 b-white">
-				<h3>Everyday Luxury</h3>
-				<p>Integrating ourselves into the entire process from farm to factory provides an unmatched level of detail and quality, with a price tag that won’t break the bank.</p>
+				<h3>Integrity</h3>
+				<p>Planted in the cool month of March to protect the young plants from the hot Egyptian Sun, and harvested by hand over 5 stages to ensure ideal maturity in September. The harvest ensures no defoliants or other chemicals usually used in mechanical harvesting ever touch the cotton, for the extra long fibres of Egyptian cotton to remain intact and undamaged, ready to be spun into the finest yarns and fabrics.</p>
 			</div>
 	</section>
 	
-	<section class="m-herohalf l-row" style="background-image: url('images/demo/sustainable.jpg')">
+	<section class="m-herohalf l-row" style="background-image: url('images/demo/fibre.jpg')">
 			<div class="l-l4 l-lshift1 b-white">
-				<h3>Sustainable by design</h3>
-				<p>To rejuvenate the egyptian cotton industry, we enforce strict sustainability practices, and provide private subsidies so the independent farmers can focus on what they love, not on where their next meal will come from.</p>
+				<h3>The Fibre</h3>
+				<p>Egyptian cotton has the world's longest, most absorbent and strongest fibres creating the softest and most durable fabric.</p>
 			</div>
 	</section>
 
