--- a/shop.html
+++ b/shop.html
@@ -61,21 +61,21 @@
 	<section role="main">
 		<div class="l-row m-shop">
 			<div class="m-product l-l4">
-				<img src="//placehold.it/400x500" alt="product 1" />
+				<img src="images/demo/crewneck.jpg" alt="product 1" />
 				<div class="copy">
 					<h4>The Crew</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 				</div>
 			</div>
 			<div class="m-product l-l4">
-				<img src="//placehold.it/400x500" alt="product 2" />
+				<img src="images/demo/crewneck.jpg" alt="product 2" />
 				<div class="copy">
 					<h4>The V</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 				</div>
 			</div>
 			<div class="m-product l-l4 l-omega">
-				<img src="//placehold.it/400x500" alt="product 3" />
+				<img src="images/demo/crewneck.jpg" alt="product 3" />
 				<div class="copy">
 					<h4>The Scoop</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
